# sidefx-lic-exporter

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build_and_release.yml
examples/: config.yml
src/sidefx_lic_exporter/: __init__.py  main.py
